@@ -9,6 +9,8 @@ Version 2.5.0 beta1
 - The default of the ``/2/instances/[instance_name]/rename`` RAPI
   resource's ``ip_check`` parameter changed from ``True`` to ``False``
   to match the underlying LUXI interface
+- When creating file-based instances via RAPI, the ``file_driver``
+  parameter no longer defaults to ``loop`` and must be specified
 
 
 Version 2.4.0 beta1
